# python-wheel-to-conda-package

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/actions/setup-uv/: action.yaml
.github/workflows/: publish.yml  test.yml
python_wheel_to_conda_package/: __init__.py  __main__.py  _get_conda_dependency_version.py  _get_conda_info_files.py  _get_conda_package_match_specification.py  _get_conda_version_specification.py  _get_dist_info_folder_name.py  _get_site_packages_path.py  _get_wheel_folder_path.py  _get_wheel_path_to_conda_path.py  _read_zip_file.py  _wheel_dist_info.py  python_wheel_to_conda_package.py
src/python_wheel_to_conda_package/: __init__.py  __main__.py  _get_conda_info_files.py  _get_conda_package_match_specification.py  _get_dist_info_folder_name.py  _get_wheel_folder_path.py  _get_wheel_path_to_conda_path.py  _wheel_dist_info.py  python_wheel_to_conda_package.py
tests/: _add_build_tag_to_wheel.py  _get_module_name.py  conftest.py  test_cli.py  test_conda_package.py  test_conversion.py  test_get_conda_dependency_version.py  test_get_conda_match_specification.py  test_get_conda_version_specification.py
tests/test-lib/: pyproject.toml  setup.py
tests/test-lib/src/test_lib/: __init__.py
tests/test-lib/test_lib/: __init__.py  __main__.py
tests/test-lib/test_lib/data/: test.csv
