[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["flit_core.*", "pandas"]
ignore_missing_imports = true

[tool.poetry]
authors = ["Thibault Derousseaux <tibdex@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]
description = "Convert a Pure-Python Wheel to a noarch Conda package"
keywords = ["conda", "conda-package", "python-wheel", "wheel"]
license = "MIT"
name = "python-wheel-to-conda-package"
packages = [{ include = "python_wheel_to_conda_package" }]
readme = "README.md"
repository = "https://github.com/tibdex/python-wheel-to-conda-package"
version = "0.4.0"

[tool.poetry.dependencies]
packaging = ">=23.0"
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flit-core = "*"
pytest = "*"
ruff = "*"

[tool.poetry.scripts]
python-wheel-to-conda-package = 'python_wheel_to_conda_package.__main__:main'

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.ruff]
ignore = [
  # The type checkers can infer the following `ANN` rules.
  "ANN101",
  "ANN102",
  "C901",   # Complex functions can be more legible than many small ones.
  "COM812", # Covered by `ruff format`.
  "E501",   # Covered by `ruff format`.
  "EM101",  # Not worth the annoyance.
  "EM102",  # Not worth the annoyance.
  # The following `D` rules are unnecessary.
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "F403",    # Useful to reexport all public symbols from an imported modules in an `__init__.py`.
  "ISC001",  # Conflicts with `ruff format`.
  "PLR0912", # Complex functions can be more legible than many small ones.
  "PT004",   # Useless distinction.
  "S101",    # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
  "TCH",     # Circular dependencies of any kind must be avoided.
  "TRY003",  # Not worth the annoyance.
  "TRY301",  # Not worth the annoyance.
]
target-version = "py39"
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S603", "S607"]
"__main__.py" = [
  "T201", # It's OK to use print in scripts.
]

[tool.ruff.pydocstyle]
convention = "google"
