[build-system]
build-backend = "hatchling.build"
requires = [
  # Keep in sync with version in `tool.uv.dev-dependencies` and in `tests/test-lib/pyproject.toml`.
  "hatchling ==1.25.0",
]

[project]
authors = [{ email = "tibdex@gmail.com", name = "Thibault Derousseaux" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]
dependencies = ["packaging >=23.0"]
description = "Convert a Pure-Python Wheel to a noarch Conda package"
keywords = ["conda", "conda-package", "python-wheel", "wheel"]
name = "python-wheel-to-conda-package"
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.1"

[project.scripts]
python-wheel-to-conda-package = "python_wheel_to_conda_package.__main__:main"

[project.urls]
Repository = "https://github.com/tibdex/python-wheel-to-conda-package"


[tool.mypy]
# Remove once https://github.com/python/mypy/issues/10428 is fixed.
files = "src,tests"
strict = true

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.ruff]
ignore = [
  # The type checkers can infer the following `ANN` rules.
  "ANN101",
  "ANN102",
  "C901",   # Complex functions can be more legible than many small ones.
  "COM812", # Conflicts with the formatter.
  "E501",   # Conflicts with the formatter.
  "EM101",  # Not worth the annoyance.
  "EM102",  # Not worth the annoyance.
  # The following `D` rules are unnecessary.
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "ISC001",  # Conflicts with the formatter.
  "PLC0414", # Redundant imports are used for re-exporting (See https://peps.python.org/pep-0484/#stub-files).
  "PLR0912", # Complex functions can be more legible than many small ones.
  "PT004",   # Useless distinction.
  "S101",    # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
  "TCH",     # Circular dependencies of any kind must be avoided.
  "TRY003",  # Not worth the annoyance.
  "TRY301",  # Not worth the annoyance.
]
target-version = "py310"
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S603", "S607"]
"__main__.py" = [
  "T201", # It's OK to use print in scripts.
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.uv]
dev-dependencies = [
  # Keep in sync with version in `build-system.requires`.
  "hatchling ==1.25.0",
  "mypy >=0",
  "pytest >= 0",
  "ruff >= 0",
]
