[build-system]
build-backend = "hatchling.build"
requires = [
    # Keep in sync with version `pyproject.toml`.
    "hatchling ==1.25.0",
]

[project]
authors = [{ name = "test-author", email = "test@email.com" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = ["pandas >=1.5"]
description = "Test library"
name = "test-lib"
requires-python = ">=3.10"
version = "0.4.2.dev0"

[tool.hatch.build.targets.wheel.shared-data]
data = "share/test-lib-external-data"
